<resources>
    <string name="app_name">To Do Hive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">add task</string>
    <string name="choose_category">Choose Category</string>
    <string name="category_default">Category</string>
    <string name="cd_checkbox">Toggle done</string>
    <string name="cd_priority_flag">Priority</string>
    <string name="cd_mark_done">Mark as done</string>
    <string name="cd_mark_undone">Mark as not done</string>
    <string name="undo">Undo</string>
    <string name="deleted_fmt">Deleted “%1$s”</string>
    <string name="task_priority">Task Priority</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="use_this_time">Use this time</string>
    <string name="time">Time</string>
    <string name="choose_time">Choose Time</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next week</string>
    <string name="clear">Clear</string>
    <string name="date">Date</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="task_time">Task time</string>
    <string name="task_category">Task Category</string>
    <string name="delete_task">Delete task</string>
    <string name="edit_task">Edit task</string>
    <string name="error_title_required">Title cannot be empty</string>
    <string name="restore">Restore</string>
    <string name="delete_forever">Delete forever</string>
    <string name="delete_forever_fmt">Delete "%1$s" permanently?</string>
    <string name="deleted_permanently">Deleted permanently</string>
    <string name="restored_fmt">Restored "%1$s"</string>
    <string name="delete">delete</string>
    <string name="no_task_in_bin">No task in Recycle Bin</string>
    <string name="clear_all">Clear All</string>
    <string name="restore_all">Restore All</string>
    <string name="nothing_to_restore">Nothing to restore</string>
    <string name="all_restored">All restored</string>
    <string name="nothing_to_clear">Nothing to clear</string>
    <string name="delete_all_permanently_confirm">Delete all permanetly confirm</string>
    <string name="completed">Completed</string>
    <string name="no_tasks">No task</string>
    <string name="in_progress">In progress</string>
    <string name="account">Account</string>
    <string name="change_account_name">Change account name</string>
    <string name="change_account_password">Change account password</string>
    <string name="change_account_image">Change account Image</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
</resources>