<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.proptit.todohive.ui.home.bin.TaskBinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRestoreAll"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_all"
            android:backgroundTint="@color/gray"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_restore"
            app:iconTint="@color/white"
            app:iconPadding="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClearAll"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:textAllCaps="false"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/white"
            app:iconPadding="6dp"
            app:layout_constraintTop_toTopOf="@id/btnRestoreAll"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/btnRestoreAll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_task_in_bin"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
